<resources>
    <string name="app_name">News Gateway</string>
<!-- Main Activity -->
    <string name="headline_button">Trending News</string>
    <string name="home_button">Home</string>
    <string name="network_off_title">Uh-Oh!</string>
    <string name="network_off_message"> You are not connected</string>
    <string name="try_again">Try Again!</string>
    <string name="open_drawer">Open Source Selections</string>
    <string name="close_drawer">Close Source Selections</string>
<!-- FragmentArticle -->
    <string name="share_message">Check this out: </string>
    <string name="null_title">Preview title is unavailable!</string>
<!-- Starting Screen -->
    <string name="developer_info">Quan Le</string>
    <string name="developed_year">© 2020,</string>
    <string name="version">Version 1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="API"><u>NEWS API</u></string>
<!-- Option -->
    <string name="categories">Category</string>
    <string name="options">Options</string>
    <string name="sources">Sources</string>
<!-- Fragment -->
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="image">Image</string>
    <string name="author">Author</string>
    <string name="published">Published Date</string>
    <string name="description">Description</string>
    <string name="page_num">Page Number</string>
    <string name="no_description">No Summary Available</string>
</resources>