<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/tiffanyBlue"
            android:elevation="4dp"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/headline_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/headline_button"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"
                android:text="@string/headline_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:animateLayoutChanges="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headline_button" />

            <ImageButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/fragment_button"
                android:contentDescription="@string/home_button"
                android:elevation="4dp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/home"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.viewpager.widget.ViewPager>

            <TextView
                android:id="@+id/network_off_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/network_off"
                android:fontFamily="sans-serif-medium"
                android:text="@string/network_off_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <TextView
                android:id="@+id/network_off_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/network_off_message"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/network_off_title"
                app:layout_constraintStart_toStartOf="@+id/network_off_title"
                app:layout_constraintTop_toBottomOf="@+id/network_off_title" />

            <Button
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/try_again_btn"
                android:fontFamily="@font/product_sans_regular"
                android:onClick="setUp_Categories"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/try_again"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/network_off_title"
                app:layout_constraintStart_toStartOf="@+id/network_off_title"
                app:layout_constraintTop_toBottomOf="@+id/network_off_message" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/drawer_list"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/light_grey"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent" />

    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>